src/components/MainHeader/MainHeader.module.scss
@import "../../global/styles/baseUI.scss";

$navContentHeight: 4rem;
$mainNavZIndex: 1000;

.mainHeader {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: $mainNavZIndex;
    padding: 1rem 0;
    transition: transform 0.3s;

    @include screenLarge() {
        padding: 1rem 0;
    }

    @include screenMedium() {
        padding: .5rem 0;
    }

    &::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 100%;
        background-color: $color-body-bg-dark;
        transition: all .2s;
    }

    &.showBg::before {
        bottom: 0;
        box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
    }

    &.hide {
        transform: translateY(-100%);
    }
}

.flexWrapper {
    display: flex;
    justify-content: space-between;
    width: $content-width;
    max-width: $content-max-width;
    margin: 0 auto;
    height: $navContentHeight;

    @include screenLarge() {
        width: 95%;
    }

    @include screenMedium() {
        height: auto;
    }
}

.brand {
    position: relative;
    display: flex;
    align-items: center;
    font-size: 3rem;
    font-weight: 900;
    letter-spacing: -2px;

    span {
        @supports (-webkit-text-stroke: 1px black) {
            color: $color-primary;
            -webkit-text-fill-color: $color-body-bg-dark;
            -webkit-text-stroke: .5px $color-primary;
        }
    }
}

.navWrapper {
    display: flex;
    margin-left: 7rem;

    @include screenExtraLarge() {
        margin-left: 4rem;
    }

    .navLink {
        position: relative;
        display: flex;
        align-items: center;
        @include blurbFont();
        font-weight: bold;
        margin-right: 2rem;
        color: rgba($color-primary, .8);
        transition: color .2s;

        @include screenMedium() {
            display: none;
        }

        &:last-child {
            margin-right: 0;
        }

        &::after {
            content: "";
            position: absolute;
            left: 50%;
            right: 50%;
            bottom: 0;
            height: 4px;
            background-color: $color-accent-blue;
            opacity: 0;
            transition: left .2s, right .2s, opacity 0s .2s;
        }
        
        &:hover {
            color: $color-primary;
            
            &::after {
                left: 0;
                right: 0;
                opacity: 1;
                /* two transitions are needed to ensure that content is 
                transpartent only after other transitions have finished */
                transition: all .2s;
            }
        }
    }
}

.leftContent {
    display: flex;
}

.rightContent {
    display: flex;
    align-items: center;

    @include screenMedium() {
        a.socialLink,
        .contactBtn {
            display: none;
        }
    }

    .socialLink {

    }
}

.mobileNav {
    position: fixed;
    left: 0;
    top: 0;
    width: 80vw;
    max-width: 30rem;
    height: 100%;
    background-color: $color-body-bg-dark;
    transform: translateX(-100%);
    transition: transform .3s, box-shadow .3s;
    z-index: $mainNavZIndex + 2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-bottom: 1rem;
    overflow-y: auto;
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);

    &.show {
        transform: translateX(0);
        box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.5);
    }

    .navLinks {
        display: flex;
        flex-direction: column;
    }

    .mobileNavLink {
        @include blurbFont();
        font-weight: bold;
        text-align: center;
        padding: 1rem 0;
        border-bottom: 1px solid $color-body-bg;

        @include screenMobile() {
            font-size: 1.2rem;
        }

        &:hover {
            background-color: $color-body-bg;
        }
    }

    .socials {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        margin-top: 2rem;

        .socialLink {
            margin-bottom: 1rem;
        }
    }
}

.pageOverlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 100vh;
    background-color: #000;
    opacity: 0;
    pointer-events: none;
    z-index: $mainNavZIndex + 1;
    transition: opacity .3s;

    &.show {
        opacity: .4;
        pointer-events: all;
    }
}

.menuIcon {
    position: relative;
    display: none;
    font-size: 2rem;
    cursor: pointer;

    @include screenMedium() {
        display: block;
    }
}

